# -RVC-

./: README.md  main.py  pyproject.toml
configs/: default.yaml  demucs.yaml  demucs_mps.yaml
models/: README.md
scripts/: cleanup_system_disk_rvc_dataset.sh  dedupe_data.py  move_rvc_dataset_to_data.sh  run_rvc_infer_jj.sh  start_rvc_train_jj.sh  start_rvc_train_jj_cpu_smoke.sh  start_rvc_train_jj_cuda_1gpu.sh  start_rvc_train_jj_cuda_2gpu.sh  start_rvc_train_jj_cuda_3gpu.sh  start_rvc_train_jj_cuda_4gpu.sh  start_rvc_train_jj_mps.sh
src/singing_voice_conversion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/svc_pipeline/: __init__.py  audio.py  cli.py  config.py  dataset.py  dataset_cli.py  features.py  pipeline.py  separation.py  vc_backend.py
tests/: test_pipeline_config.py
