[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singing-voice-conversion"
version = "0.1.0"
description = "Authorized singing voice conversion pipeline scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "soundfile>=0.12",
  "librosa>=0.10",
  "typer>=0.9",
  "rich>=13.0",
  "pydantic>=2.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
app = ["gradio>=4.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
svc-convert = "svc_pipeline.cli:app"
svc-dataset = "svc_pipeline.dataset_cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
